<resources>
    <string name="app_name">SYMBIAN_PROJECT</string>
    <string name="cadastroUsuarioTitulo">CADASTRO DE USUÁRIO</string>
    <string name="txtNome">NOME</string>
    <string name="txtSobreNome">SOBRENOME</string>
    <string name="txtEmail">EMAIL</string>
    <string name="txtLogin">LOGIN</string>
    <string name="txtSenha">SENHA</string>
    <string name="cadastrarUsuario">CADASTRAR</string>
    <string name="Logar">LOGIN</string>
    <string name="titulo_cadastro_usuario">CADASTRO DE USUÁRIO</string>
    <string name="mensagem_cadastro_usuario">VOCÊ ETÁ CADASTRANDO UM USUÁRIO</string>
    <string name="salvar">SALVAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="cadastroEnderecoTitulo">CADASTRO DE ENDEREÇO</string>
    <string name="txtCep">CEP</string>
    <string name="txtNumero">NÚMERO</string>
    <string name="txtComplemento">COMPLEMENTO</string>
    <string name="cadastrarEndereco">CADASTRAR</string>
</resources>