<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroUsuario">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        tools:context=".activity_cadastro_usuario">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastroEnderecoTitulo"
            style="@style/textTitulo"/>

        <EditText
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtNome"
            android:inputType="text"
            android:hint="@string/txtCep"/>

        <EditText
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtSobrenome"
            android:inputType="text"
            android:hint="@string/txtNumero"/>

        <EditText
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtEmail"
            android:inputType="textEmailAddress"
            android:hint="@string/txtComplemento"/>

        <Button
            style="@style/btnForm"
            android:id="@+id/btnCadastrarEndereco"
            android:text="@string/cadastrarEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>